landing page with new type

--- a/unit_1/css/main.css
+++ b/unit_1/css/main.css
@@ -1,28 +1,35 @@
+
 body {
 	color: #FFFFFF;
 	background: url("http://ordinaryfaith.net/wp-content/uploads/2015/03/o-FINGER-PAINTING-facebook.jpg");
 	background-size: cover;
-	font-family: "Garamond";
+font-family: 'Open Sans', sans-serif;
 }
 
 h1 {text-align: center;
 	color: #FFFFFF;
-	font-size: 75px;
+font-family: 'Henny Penny', cursive;
+ font-size: 75px;
 	font-weight: bolder;
 
 }
 
 #slogan p {text-align: center;
 	font-weight: bold;
-	font-size: 40px;
-	font-style: italic;
+	font-size: 45px;
+font-family: 'Open Sans Condensed', sans-serif;
 }
 
-#generalinfo p{font-size: 25px
+#generalinfo p{font-size: 25px;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
-#offerings p{font-size: 25px;}
+#offerings p{font-size: 25px;
+font-family: 'Open Sans Condensed', sans-serif;
+}
 
-#list ul{font-size: 25px;}
+
+#list ul{font-size: 25px;
+font-family: 'Open Sans Condensed', sans-serif;}
 
 #contact p{text-align: center;}
